@@ -1,15 +1,17 @@
 /* Copyright (C) 1993, Franz Inc., Berkeley, CA.  All rights reserved. */
 
-/* $Header: /repo/cvs.copy/eli/Attic/clman.h,v 2.4 1996/10/03 07:21:04 layer Exp $ */
+/* $Header: /repo/cvs.copy/eli/Attic/clman.h,v 2.5 1996/10/03 17:56:29 layer Exp $ */
 
 #ifndef WIN32
 #include <unistd.h>
+#include <netinet/in.h>
+#else
+#include <winsock.h>
 #endif
 #include <stdio.h>
 #include <sys/types.h>
 #include <sys/stat.h>
 #include <fcntl.h>
-#include <netinet/in.h>
 
 struct Header {
     int entry_table_size;
